--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "version": "3.0.0",
+  "version": "2.0.0",
   "private": "true",
   "description": "My website portfolio",
   "main": "index.js",
@@ -8,7 +8,8 @@
     "dev": "next dev",
     "build": "next build",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "test": "next build && next start"
   },
   "repository": {
     "type": "git",
@@ -24,27 +25,30 @@
   "bugs": {
     "url": "https://github.com/thegoldenbolden/portfolio/issues"
   },
-  "homepage": "https://github.com/thegoldenbolden/portfolio#readme",
+  "homepage": "https://jaocbbolden.com",
   "dependencies": {
-    "@headlessui/react": "^1.7.7",
-    "@next/font": "^13.1.1",
+    "@headlessui/react": "^1.7.13",
+    "@prisma/client": "^4.12.0",
     "@sendgrid/mail": "^7.7.0",
-    "@vercel/analytics": "^0.1.6",
-    "next": "^13.1.1",
+    "@vercel/analytics": "^0.1.11",
+    "framer-motion": "^10.11.2",
+    "next": "^13.2.4",
+    "next-auth": "^4.21.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.7.1"
+    "sharp": "^0.32.0"
   },
   "devDependencies": {
-    "@types/node": "^18.11.18",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.10",
-    "autoprefixer": "^10.4.13",
-    "eslint": "^8.31.0",
-    "eslint-config-next": "^13.1.1",
-    "postcss": "^8.4.20",
-    "sass": "^1.57.1",
-    "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.4"
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.33",
+    "@types/react-dom": "^18.0.11",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.37.0",
+    "eslint-config-next": "^13.2.4",
+    "postcss": "^8.4.21",
+    "prisma": "^4.12.0",
+    "schema-dts": "^1.1.2",
+    "tailwindcss": "^3.3.1",
+    "typescript": "^5.0.4"
   }
 }
