--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
   },
   "homepage": "https://jaocbbolden.com",
   "dependencies": {
-    "@headlessui/react": "^1.7.13",
+    "@headlessui/react": "^1.7.14",
     "@prisma/client": "^4.12.0",
     "@sendgrid/mail": "^7.7.0",
     "@vercel/analytics": "^0.1.11",
-    "framer-motion": "^10.11.2",
-    "next": "^13.2.4",
+    "framer-motion": "^10.12.2",
+    "next": "13.2.5-canary.16",
     "next-auth": "^4.22.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -40,11 +40,11 @@
   },
   "devDependencies": {
     "@types/node": "^18.15.11",
-    "@types/react": "^18.0.34",
+    "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.38.0",
-    "eslint-config-next": "^13.2.4",
+    "eslint-config-next": "13.3.0",
     "postcss": "^8.4.21",
     "prisma": "^4.12.0",
     "schema-dts": "^1.1.2",
