--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "next build",
     "lint": "next lint",
     "start": "next start",
-    "test": "next build && next start"
+    "bs": "next build && next start"
   },
   "repository": {
     "type": "git",
@@ -39,6 +39,7 @@
     "sharp": "^0.32.0"
   },
   "devDependencies": {
+    "@headlessui/tailwindcss": "^0.1.3",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
