--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "next build",
     "lint": "next lint",
     "start": "next start",
-    "bs": "next build && next start"
+    "postinstall": "prisma generate"
   },
   "repository": {
     "type": "git",
@@ -51,7 +51,6 @@
     "postcss": "^8.4.23",
     "prettier": "2.8.8",
     "prisma": "^4.13.0",
-    "schema-dts": "^1.1.2",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.4"
   }
