--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "next build",
     "lint": "next lint",
     "start": "next start",
+    "bs": "next build && next start",
     "postinstall": "prisma generate"
   },
   "repository": {
@@ -38,6 +39,7 @@
     "next-mdx-remote": "^4.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "remark-gfm": "^3.0.1",
     "sharp": "^0.32.1"
   },
   "devDependencies": {
