--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "next lint",
     "start": "next start",
     "postinstall": "prisma generate",
-    "bs": "next build && next start"
+    "bs": "next build && next start",
+    "format": "prettier --write ./src"
   },
   "repository": {
     "type": "git",
