--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "build": "next build",
     "lint": "next lint",
     "start": "next start",
-    "postinstall": "prisma generate",
     "bs": "next build && next start",
     "format": "prettier --write ./src"
   },
@@ -29,31 +28,24 @@
     "singleQuote": true
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.15",
-    "@prisma/client": "^4.15.0",
     "@sendgrid/mail": "^7.7.0",
     "@vercel/analytics": "^1.0.1",
-    "framer-motion": "^10.12.16",
-    "next": "^13.4.4",
-    "next-auth": "^4.22.1",
-    "next-mdx-remote": "^4.4.1",
+    "@vercel/kv": "^0.2.2",
+    "next": "^13.4.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "remark-gfm": "^3.0.1",
     "sharp": "^0.32.1"
   },
   "devDependencies": {
-    "@headlessui/tailwindcss": "^0.1.3",
-    "@types/node": "^20.2.5",
-    "@types/react": "^18.2.8",
-    "@types/react-dom": "^18.2.4",
+    "@types/node": "^20.3.3",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.42.0",
-    "eslint-config-next": "^13.4.4",
+    "eslint": "^8.44.0",
+    "eslint-config-next": "^13.4.8",
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
-    "prisma": "^4.15.0",
     "tailwindcss": "^3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "^5.1.6"
   }
 }
