--- a/package.json
+++ b/package.json
@@ -23,24 +23,26 @@
     "url": "https://github.com/thegoldenbolden/portfolio/issues"
   },
   "dependencies": {
-    "@vercel/analytics": "^1.0.2",
-    "@vercel/kv": "^0.2.2",
-    "next": "^13.4.19",
+    "@vercel/analytics": "^1.1.1",
+    "@vercel/kv": "^1.0.1",
+    "clsx": "^2.1.0",
+    "geist": "^1.2.0",
+    "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sharp": "^0.32.5"
+    "sharp": "^0.33.1"
   },
   "devDependencies": {
-    "@types/node": "^20.6.0",
-    "@types/react": "^18.2.21",
-    "@types/react-dom": "^18.2.7",
-    "autoprefixer": "^10.4.15",
-    "eslint": "^8.49.0",
-    "eslint-config-next": "^13.4.19",
-    "postcss": "^8.4.29",
-    "prettier": "^3.0.3",
-    "prettier-plugin-tailwindcss": "^0.5.4",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.2.2"
+    "@types/node": "^20.10.6",
+    "@types/react": "^18.2.46",
+    "@types/react-dom": "^18.2.18",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.0.4",
+    "postcss": "^8.4.32",
+    "prettier": "^3.1.1",
+    "prettier-plugin-tailwindcss": "^0.5.10",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.3.3"
   }
 }
