--- a/package.json
+++ b/package.json
@@ -1,48 +1,22 @@
 {
-  "name": "portfolio",
-  "version": "2.1.0",
-  "private": "true",
-  "description": "My website portfolio",
-  "homepage": "https://www.jacobbolden.com",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "lint": "next lint",
-    "start": "next start",
-    "bs": "next build && next start",
-    "format": "prettier --write ./src"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/thegoldenbolden/portfolio.git"
-  },
-  "author": "Jacob Bolden",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/thegoldenbolden/portfolio/issues"
-  },
-  "dependencies": {
-    "@vercel/analytics": "^1.1.1",
-    "@vercel/kv": "^1.0.1",
-    "clsx": "^2.1.0",
-    "geist": "^1.2.0",
-    "next": "^14.0.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "sharp": "^0.33.1"
+    "build": "turbo build",
+    "dev": "turbo dev",
+    "lint": "turbo lint",
+    "type-check": "turbo type-check",
+    "clean": "turbo clean",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
-    "@types/node": "^20.10.6",
-    "@types/react": "^18.2.46",
-    "@types/react-dom": "^18.2.18",
-    "autoprefixer": "^10.4.16",
+    "@repo/typescript-config": "workspace:*",
     "eslint": "^8.56.0",
-    "eslint-config-next": "^14.0.4",
-    "postcss": "^8.4.32",
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.10",
-    "tailwindcss": "^3.4.0",
-    "typescript": "^5.3.3"
+    "turbo": "^1.11.2"
+  },
+  "packageManager": "pnpm@8.9.0",
+  "engines": {
+    "node": ">=18"
   }
 }
