--- a/apps/v2/package.json
+++ b/apps/v2/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@repo/ui": "workspace:*",
-    "@vercel/kv": "^1.0.1",
+    "@vercel/analytics": "^1.1.1",
     "clsx": "^2.1.0",
     "geist": "^1.2.0",
     "next": "^14.0.4",
