--- a/package.json
+++ b/package.json
@@ -1,46 +1,22 @@
 {
-  "name": "portfolio",
-  "version": "2.1.0",
-  "private": "true",
-  "description": "My website portfolio",
-  "homepage": "https://www.jacobbolden.com",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "lint": "next lint",
-    "start": "next start",
-    "bs": "next build && next start",
-    "format": "prettier --write ./src"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/thegoldenbolden/portfolio.git"
-  },
-  "author": "Jacob Bolden",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/thegoldenbolden/portfolio/issues"
-  },
-  "dependencies": {
-    "@vercel/analytics": "^1.0.2",
-    "@vercel/kv": "^0.2.2",
-    "next": "^13.4.19",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "sharp": "^0.32.5"
+    "build": "turbo build",
+    "dev": "turbo dev",
+    "lint": "turbo lint",
+    "type-check": "turbo type-check",
+    "clean": "turbo clean",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
-    "@types/node": "^20.6.0",
-    "@types/react": "^18.2.21",
-    "@types/react-dom": "^18.2.7",
-    "autoprefixer": "^10.4.15",
-    "eslint": "^8.49.0",
-    "eslint-config-next": "^13.4.19",
-    "postcss": "^8.4.29",
-    "prettier": "^3.0.3",
-    "prettier-plugin-tailwindcss": "^0.5.4",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.2.2"
+    "@repo/typescript-config": "workspace:*",
+    "eslint": "^8.56.0",
+    "prettier": "^3.1.1",
+    "prettier-plugin-tailwindcss": "^0.5.10",
+    "turbo": "^1.11.2"
+  },
+  "packageManager": "pnpm@8.9.0",
+  "engines": {
+    "node": ">=18"
   }
 }
